--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+
+.img span{
+  position: absolute;
+    width: 100%;
+    left: 0px;
+    margin-top: 260px;
+    font-size: 38px;
+    color: white;
+    text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+}
+
+.img span:nth-child(1){
+  margin-top: 50px;
+}
+
+.img img{
+  width: 100%;
+}
+
+body, .img{
+  background: black;
+}
